@@ -32,6 +32,7 @@
         <javax-validation.version>1.1.0.Final</javax-validation.version>
         <hibernate-validator.version>5.2.4.Final</hibernate-validator.version>
         <guava.version>19.0</guava.version>
+        <apache.httpcomponents.version>4.3.4</apache.httpcomponents.version>
     </properties>
 
     <dependencies>
@@ -195,6 +196,13 @@
             <version>${webbeans}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${apache.httpcomponents.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
