@@ -1,17 +1,22 @@
 /*
- * Copyright 2014 the original author or authors.
+ * Licensed to CRATE Technology GmbH ("Crate") under one or more contributor
+ * license agreements.  See the NOTICE file distributed with this work for
+ * additional information regarding copyright ownership.  Crate licenses
+ * this file to you under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.  You may
+ * obtain a copy of the License at
  *
- * Licensed under the Apache License, Version 2.0 (the "License");
- * you may not use this file except in compliance with the License.
- * You may obtain a copy of the License at
- *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
+ * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
+ * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  See the
+ * License for the specific language governing permissions and limitations
+ * under the License.
+ *
+ * However, if you have executed another commercial license agreement
+ * with Crate these terms will supersede the license and you may use the
+ * software solely pursuant to the terms of the relevant commercial agreement.
  */
 
 package org.springframework.data.crate.repository.support;
@@ -26,6 +31,7 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.data.crate.CrateIntegrationTest;
 import org.springframework.data.crate.config.TestCrateConfiguration;
+import org.springframework.data.crate.core.mapping.schema.CratePersistentEntitySchemaManager;
 import org.springframework.data.crate.repository.config.EnableCrateRepositories;
 import org.springframework.data.repository.query.QueryLookupStrategy;
 import org.springframework.data.sample.entities.person.Person;
@@ -40,6 +46,7 @@ import static java.util.Arrays.asList;
 import static org.hamcrest.core.Is.is;
 import static org.hamcrest.core.IsNot.not;
 import static org.junit.Assert.assertThat;
+import static org.springframework.data.crate.core.mapping.schema.SchemaExportOption.CREATE_DROP;
 
 @RunWith(SpringJUnit4ClassRunner.class)
 @ContextConfiguration(classes = {CreateLookupStrategyIntegrationTest.TestConfig.class})
@@ -50,6 +57,7 @@ public class CreateLookupStrategyIntegrationTest extends CrateIntegrationTest {
 
     @Before
     public void setup() throws InterruptedException {
+        ensureGreen();
         List<Person> persons = asList(
                 new Person("person11@test.com", "person1", 25),
                 new Person("person12@test.com", "person1", 27),
@@ -113,6 +121,11 @@ public class CreateLookupStrategyIntegrationTest extends CrateIntegrationTest {
         @Bean
         public CrateClient crateClient() {
             return new CrateClient(String.format(Locale.ENGLISH, "%s:%d", server.crateHost(), server.transportPort()));
+        }
+
+        @Bean
+        public CratePersistentEntitySchemaManager cratePersistentEntitySchemaManager() throws Exception {
+            return new CratePersistentEntitySchemaManager(crateTemplate(), CREATE_DROP);
         }
 
         @Override
